<resources>
    <string name="app_name">Insta</string>
    <string name="or">OR</string>
    <string name="username_mobile_email">Phone number, email or username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="forget_password">forgot password? click her</string>

    <string name="err_request_failed">request failed</string>
    <string name="err_time_out">request time out</string>
    <string name="err_no_internet">no internet connection</string>

    <string-array name="languages">
            <item>English</item>
            <item>فارسی</item>
    </string-array>

</resources>